--- a/WebDbMonitoring/WebDbMonitoring.csproj
+++ b/WebDbMonitoring/WebDbMonitoring.csproj
@@ -7,8 +7,8 @@
     <UserSecretsId>5e8086c3-4a4d-43d5-b21b-fb8d5d1f4975</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
+  <ServerGarbageCollection>false</ServerGarbageCollection>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.8" />
